API call with axios, migration create db and connection db

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ NODE_ENV=development
 PORT=8082
 DB_USER=postgres
 DB_HOST=localhost
-DB_NAME=mywebsite
-DB_PASSWORD=12345
+DB_NAME=ecommercedb
+DB_PASSWORD=123456
 DB_PORT=5432
