--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "backend": "file:",
+    "cors": "2.8.5",
     "dotenv": "16.4.5",
     "ejs": "3.1.10",
     "express": "^4.21.2",
@@ -23,6 +24,7 @@
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "nodemon": "3.1.4"
+    "nodemon": "3.1.4",
+    "sequelize-cli": "^6.6.2"
   }
 }
